<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_white"
    tools:context=".RegisterActivity">
    <ImageView
        android:id="@+id/title2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:src="@drawable/bottom_mid_img"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="0dp">

        <ImageView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginRight="130dp"
            android:src="@drawable/up_left_img"
            android:adjustViewBounds="true"
            app:layout_constraintTop_toTopOf="parent"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginTop="170dp"
                android:src="@drawable/icon_app"
                android:adjustViewBounds="true"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/already_registered_login"
                android:textSize="18sp"
                android:layout_marginBottom="5dp"
                android:textAlignment="center"
                android:textColor="@color/purple_700"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/please_enter_your_name"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="38dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="5dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingLeft="24dp"
                android:inputType="text"
                android:textColorHint="#939393"
                android:hint="@string/please_enter_your_name"
                android:background="@drawable/bg_edit_text"
                android:layout_marginLeft="26dp"
                android:layout_marginRight="26dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/please_enter_email"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="38dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="5dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingLeft="24dp"
                android:inputType="textEmailAddress"
                android:textColorHint="#939393"
                android:hint="@string/please_enter_email"
                android:background="@drawable/bg_edit_text"
                android:layout_marginLeft="26dp"
                android:layout_marginRight="26dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/please_enter_password"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="38dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="5dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingLeft="24dp"
                android:inputType="textPassword"
                android:hint="@string/please_enter_password"
                android:textColorHint="#939393"
                android:background="@drawable/bg_edit_text"
                android:layout_marginLeft="26dp"
                android:layout_marginRight="26dp"/>
            <ImageButton
                android:id="@+id/btn_signup"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="30dp"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:background="#00000000"
                android:src="@drawable/btn_submit"
                android:contentDescription="@string/button_sign_up" />
        </LinearLayout>
    </FrameLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>